# style

./: .ai-ack  .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: contributing.md  skill-review-notes.md  style-overview.md
docs/adr/: 0001-single-source-markdown.md  0002-types-first-lsp.md  0003-caveman-voice-for-rules.md  0004-managed-section-marker-strategy.md  0005-six-axis-review-with-operability.md  0006-cursor-skills-native-format.md  0007-prune-uninstall-path.md  0008-expand-catalog-threat-ci-cache-rate-limit.md  0009-fix-global-agents-md-collision.md  0010-codex-native-skills.md  0011-privacy-opt-out-harness.md  0012-concise-technical-prose-for-agent-sources.md  0013-remove-optional-response-skill.md
scripts/: __init__.py  build.py  lint_bundle.py  lint_skill_evals.py  lint_skill_metadata.py  lint_source.py  source.py
scripts/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py  goose.py  openclaw.py  opencode.py  pi.py  vibe.py
source/commands/: bug.md  commit.md  done.md  haiku.md  plan.md  queue-audit.md  refactor.md  release.md  review.md  snapshot-review.md  spec.md  tdd.md  threat-model.md
source/evals/: skill-routing.yml
source/rules/: agent-workflow.md  code-quality.md  design-principles.md  documentation.md  observability.md  privacy-by-design.md  reuse-and-idioms.md  (+2 more)
tests/: conftest.py  test_adapters_bundle.py  test_adapters_common.py  test_adapters_per_agent.py  test_build.py  test_lint_bundle.py  test_lint_source.py  test_source.py
(+89 files in other folders)
